apps/grocy/deploy/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grocy-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: grocy-http-port
      protocol: HTTP
    hosts:
      - grocy.simplefxn.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: grocy-https-port
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: grocy.simplefxn.com
    hosts:
      - grocy.simplefxn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grocy-vs
  namespace: istio-system
spec:
  hosts:
  - "grocy.simplefxn.com"
  gateways:
  - grocy-gateway
  http:
  - route:
    - destination:
        host: grocy.apps.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grocy
  namespace: istio-system
spec:
  host: grocy.apps.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
